Manifests/ingress_example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-blue-green-app
  name: example-blue-green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-blue-green-app
  strategy: {}
  template:
    metadata:
      labels:
        app: example-blue-green-app
    spec:
      containers:
        - image: tanchwa/blue-green-app-test:SHASUMGOESHERE
          name: blue-green-app-test
          ports:
            - containerPort: 8080
