Manifests/api_gateway_example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-blue-green-app
  name: example-blue-green-app
  namespace: blue-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-blue-green-app
  strategy: {}
  template:
    metadata:
      labels:
        app: example-blue-green-app
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: tanchwa/blue-green-app-test@sha256:f45d2c1a61d69452ab67c7984cd35869f69ae1fc7cb491fe35b130b1e3446531
          imagePullPolicy: Always
          name: blue-green-app-test
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - "ALL"
          ports:
            - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https-gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: gke-l7-global-external-managed   # already exists, just reference it
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "blue-green.andrewsutliff.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "blue-green.andrewsutliff.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: example-blue-green-app
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-green-route
  namespace: blue-green
spec:
  parentRefs:
  - name: external-https-gateway
    namespace: blue-green
    sectionName: https
  hostnames:
  - "blue-green.andrewsutliff.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: example-blue-green-app
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: example-blue-green-app
  name: example-blue-green-app
  namespace: blue-green
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: example-blue-green-app
status:
  loadBalancer: {}
